# cpplab

./: .gitignore  LICENSE  README.md
clabs/: __VA_ARGS__.c  argc_argv.c  big_endian_little_endian.c  byte_alignment.c  errno.c  fudian_equal_test.c  function_pointer.c  limits.c  perror.c  signal.c  strerror.c
clabs/assert/: Makefile  assert.c  static_assert.c
clabs/ctype/: isxxx.c
clabs/math/: ceil.c  fabs.c  floor.c  round.c
clabs/stddef/: offsetof.c
clabs/stdio/: printf_scanf.c  vprintf_snprintf.c
clabs/stdlib/: qsort.c
clabs/string/: memmove.c  strchr_strrchr_memchr.c  strcmp_strncmp_memcmp.c  strcpy_strncpy.c
clabs/time/: strftime.c
cpplabs/algorithm/: for_each.cpp
cpplabs/atomic/: atomic.cpp
cpplabs/c11/: alias_template.cpp  auto_decltype.cpp  constexpr.cpp  enum_class.cpp  noexcept.cpp  range_for.cpp  ratio.cpp  regex.cpp  tie.cpp  tuple.cpp  u8.cpp  uniform_init.cpp  user_defined_literal.cpp
cpplabs/c14/: Makefile  string_literal.cpp
cpplabs/c17/: Makefile  deprecated.cpp  nodiscard.cpp  std_size.cpp  string_view.cpp  structured_binding.cpp
cpplabs/chrono/: duration.cpp  steady_clock.cpp  system_clock.cpp  time_point.cpp
cpplabs/clib/: remove.cpp
cpplabs/example_extern_C/: main.cpp  strlen.c
cpplabs/functional/: bind.cpp  greator_example.cpp
cpplabs/iterator/: advance.cpp  back_insert_iterator.cpp  back_inserter.cpp  distance.cpp  front_insert_iterator.cpp  (+6 more)
cpplabs/topics/gloabl_variables/: CMakeLists.txt  generate_project.bat  generate_project.sh
cpplabs/topics/gloabl_variables/src/: a.cpp  b.cpp  foo.cpp  foo.h  main.cpp
(+95 files in other folders)
